# attested-tls-benchmarks

./: Cargo.toml  README.md
crates/dcap-generate/: Cargo.toml  create-chart.py
crates/dcap-generate/results/: 1771602441_903723823-fs-baseline.csv
crates/dcap-generate/src/: main.rs
crates/dcap-generate/tests/: smoke.rs
crates/nested-tls/: Cargo.toml  create-chart.py
crates/nested-tls/src/: main.rs
crates/nested-tls/tests/: smoke.rs
results-gcp/: 1771605431_640795338-fs-baseline.csv
results-nested-tls/: 1771917430_530128155-tls_upload.csv  1771917794_703342881-tls_upload.csv  1771917822_43492232-tls_upload.csv  1771918008_456596955-tls_upload.csv  1771918088_976327133-tls_upload.csv  1771918138_415605240-tls_upload.csv  1771918174_748273960-tls_upload.csv  1771918191_598019718-tls_upload.csv  1771918204_50393237-tls_upload.csv  1771918223_137196639-tls_upload.csv  1771918251_811244228-tls_upload.csv  1771918301_336052928-tls_upload.csv  1771919748_360667259-tls_upload.csv  1771920512_268127599-tls_upload.csv  1771920557_301517346-tls_upload.csv  1771920598_698957753-tls_upload.csv  1771920677_391133063-tls_upload.csv
results-verify-with-collateral/: 1771832655_872976764-verify_dcap.csv
results-verify-with-intel-pcs/: 1771835029_951880956-verify_dcap.csv
