[package]
name = "dcap-generate-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
configfs-tsm = "0.0.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.17.1"
