[package]
name = "nested-tls-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tokio-rustls = "0.26"
rcgen = "0.13"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.17.1"
